lib/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Start: peg$parseStart },
      peg$startRuleFunction  = peg$parseStart,

      peg$c0 = function(program) { return program; },
      peg$c1 = peg$anyExpectation(),
      peg$c2 = peg$otherExpectation("whitespace"),
      peg$c3 = "\t",
      peg$c4 = peg$literalExpectation("\t", false),
      peg$c5 = "\x0B",
      peg$c6 = peg$literalExpectation("\x0B", false),
      peg$c7 = "\f",
      peg$c8 = peg$literalExpectation("\f", false),
      peg$c9 = " ",
      peg$c10 = peg$literalExpectation(" ", false),
      peg$c11 = "\xA0",
      peg$c12 = peg$literalExpectation("\xA0", false),
      peg$c13 = "\uFEFF",
      peg$c14 = peg$literalExpectation("\uFEFF", false),
      peg$c15 = /^[\n\r\u2028\u2029]/,
      peg$c16 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
      peg$c17 = peg$otherExpectation("end of line"),
      peg$c18 = "\n",
      peg$c19 = peg$literalExpectation("\n", false),
      peg$c20 = "\r\n",
      peg$c21 = peg$literalExpectation("\r\n", false),
      peg$c22 = "\r",
      peg$c23 = peg$literalExpectation("\r", false),
      peg$c24 = "\u2028",
      peg$c25 = peg$literalExpectation("\u2028", false),
      peg$c26 = "\u2029",
      peg$c27 = peg$literalExpectation("\u2029", false),
      peg$c28 = peg$otherExpectation("comment"),
      peg$c29 = function() { return { type: 'comment', value: text() }; },
      peg$c30 = "/*",
      peg$c31 = peg$literalExpectation("/*", false),
      peg$c32 = "*/",
      peg$c33 = peg$literalExpectation("*/", false),
      peg$c34 = ";",
      peg$c35 = peg$literalExpectation(";", false),
      peg$c36 = "//",
      peg$c37 = peg$literalExpectation("//", false),
      peg$c38 = /^[A-Za-z_]/,
      peg$c39 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false),
      peg$c40 = /^[A-Za-z0-9_]/,
      peg$c41 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false),
      peg$c42 = function() { return text(); },
      peg$c43 = peg$otherExpectation("bit"),
      peg$c44 = /^[01]/,
      peg$c45 = peg$classExpectation(["0", "1"], false, false),
      peg$c46 = peg$otherExpectation("digit"),
      peg$c47 = /^[0-9]/,
      peg$c48 = peg$classExpectation([["0", "9"]], false, false),
      peg$c49 = peg$otherExpectation("hex digit"),
      peg$c50 = /^[0-9a-fA-F]/,
      peg$c51 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
      peg$c52 = /^[\-]/,
      peg$c53 = peg$classExpectation(["-"], false, false),
      peg$c54 = function(neg, digits) { return parseInt((!neg ? '':'-') + digits.join(''), 10); },
      peg$c55 = "$",
      peg$c56 = peg$literalExpectation("$", false),
      peg$c57 = "0x",
      peg$c58 = peg$literalExpectation("0x", false),
      peg$c59 = function(hexits) { return parseInt(hexits.join(''), 16); },
      peg$c60 = "0b",
      peg$c61 = peg$literalExpectation("0b", false),
      peg$c62 = "%",
      peg$c63 = peg$literalExpectation("%", false),
      peg$c64 = function(bits) { return parseInt(bits.join(''), 2); },
      peg$c65 = "*",
      peg$c66 = peg$literalExpectation("*", false),
      peg$c67 = peg$otherExpectation("single-quoted string"),
      peg$c68 = "'",
      peg$c69 = peg$literalExpectation("'", false),
      peg$c70 = function(chars) { return chars.join(''); },
      peg$c71 = peg$otherExpectation("double-quoted string"),
      peg$c72 = "\"",
      peg$c73 = peg$literalExpectation("\"", false),
      peg$c74 = function(n) { return n <= 0xffff; },
      peg$c75 = function(n) { return { type: 'number', value: n }; },
      peg$c76 = function(s) { return { type: 'string', value: s }; },
      peg$c77 = function(l) { return { type: 'label', value: l }; },
      peg$c78 = function(value) { return { type: 'term', value: value }; },
      peg$c79 = "(",
      peg$c80 = peg$literalExpectation("(", false),
      peg$c81 = ")",
      peg$c82 = peg$literalExpectation(")", false),
      peg$c83 = function(expr) { return expr; },
      peg$c84 = function(op, arg) {
            return {
              type: 'unary',
              operator: op,
              argument: arg
            };
          },
      peg$c85 = "-",
      peg$c86 = peg$literalExpectation("-", false),
      peg$c87 = "~",
      peg$c88 = peg$literalExpectation("~", false),
      peg$c89 = "!",
      peg$c90 = peg$literalExpectation("!", false),
      peg$c91 = "<",
      peg$c92 = peg$literalExpectation("<", false),
      peg$c93 = ">",
      peg$c94 = peg$literalExpectation(">", false),
      peg$c95 = function(head, tail) { return buildBinaryExpression(head, tail); },
      peg$c96 = "/",
      peg$c97 = peg$literalExpectation("/", false),
      peg$c98 = "+",
      peg$c99 = peg$literalExpectation("+", false),
      peg$c100 = "<<",
      peg$c101 = peg$literalExpectation("<<", false),
      peg$c102 = ">>",
      peg$c103 = peg$literalExpectation(">>", false),
      peg$c104 = "<=",
      peg$c105 = peg$literalExpectation("<=", false),
      peg$c106 = ">=",
      peg$c107 = peg$literalExpectation(">=", false),
      peg$c108 = "==",
      peg$c109 = peg$literalExpectation("==", false),
      peg$c110 = "!=",
      peg$c111 = peg$literalExpectation("!=", false),
      peg$c112 = "&",
      peg$c113 = peg$literalExpectation("&", false),
      peg$c114 = "^",
      peg$c115 = peg$literalExpectation("^", false),
      peg$c116 = "|",
      peg$c117 = peg$literalExpectation("|", false),
      peg$c118 = "&&",
      peg$c119 = peg$literalExpectation("&&", false),
      peg$c120 = "||",
      peg$c121 = peg$literalExpectation("||", false),
      peg$c122 = function(e) {
          var statements;
          if (e.type !== 'comment') {
            statements = e.filter(function(s) { return s; });
            for (var i = 0; i < statements.length; i++) {
              statements[i].line = location().start.line;
            }
          } else {
            statements = [];
          }
          return statements;
        },
      peg$c123 = function(ld) { return [ld]; },
      peg$c124 = function(dir) { return dir; },
      peg$c125 = function(name, op) { return { type: 'inst', name: name, operand: op && op[1] }; },
      peg$c126 = "=",
      peg$c127 = peg$literalExpectation("=", false),
      peg$c128 = function(name, expr) { return { type: 'label_def', name: name, expr: expr }; },
      peg$c129 = ":",
      peg$c130 = peg$literalExpectation(":", false),
      peg$c131 = function(name) { return { type: 'label', name: name }; },
      peg$c132 = /^[A-Za-z]/,
      peg$c133 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false),
      peg$c134 = function() { return text().toLowerCase(); },
      peg$c135 = "#",
      peg$c136 = peg$literalExpectation("#", false),
      peg$c137 = function(expr) { return { type: 'op', mode: 'imm', expr: expr }; },
      peg$c138 = function(expr) { return { type: 'op', mode: 'abs', expr: expr }; },
      peg$c139 = ",",
      peg$c140 = peg$literalExpectation(",", false),
      peg$c141 = "x",
      peg$c142 = peg$literalExpectation("x", false),
      peg$c143 = "X",
      peg$c144 = peg$literalExpectation("X", false),
      peg$c145 = function(expr) { return { type: 'op', mode: 'abx', expr: expr }; },
      peg$c146 = "y",
      peg$c147 = peg$literalExpectation("y", false),
      peg$c148 = "Y",
      peg$c149 = peg$literalExpectation("Y", false),
      peg$c150 = function(expr) { return { type: 'op', mode: 'aby', expr: expr }; },
      peg$c151 = function(expr) { return { type: 'op', mode: 'ind', expr: expr }; },
      peg$c152 = function(expr) { return { type: 'op', mode: 'izx', expr: expr }; },
      peg$c153 = function(expr) { return { type: 'op', mode: 'izy', expr: expr }; },
      peg$c154 = ".byte",
      peg$c155 = peg$literalExpectation(".byte", true),
      peg$c156 = ".aasc",
      peg$c157 = peg$literalExpectation(".aasc", true),
      peg$c158 = function(fst, e) {return e},
      peg$c159 = function(fst, rest) {
            var exprs = [fst].concat(rest);
            return { type: 'directive', name: 'byte', exprs: exprs };
          },
      peg$c160 = ".word",
      peg$c161 = peg$literalExpectation(".word", true),
      peg$c162 = function(fst, rest) {
            var exprs = [fst].concat(rest);
            return { type: 'directive', name: 'word', exprs: exprs };
          },
      peg$c163 = ".res",
      peg$c164 = peg$literalExpectation(".res", true),
      peg$c165 = function(len, e) {return e},
      peg$c166 = function(len, fillByte) {
            return { type: 'directive', name: 'res', len: len, fillByte: fillByte };
          },
      peg$c167 = function(head, e) {return e},
      peg$c168 = function(head, tail) {
            var statements = head;
            for (var i = 0; i < tail.length; i++) {
              statements = statements.concat(tail[i]);
            }
            statements = statements
              .filter(function(e) { return (e.type !== 'comment'); });
            return statements;
          },
      peg$c169 = function(body) { return { type: 'program', body: body }; },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$resultsCache = {},

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3;

    var key    = peg$currPos * 69 + 0,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse__();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseProgram();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse__();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseSourceCharacter() {
    var s0;

    var key    = peg$currPos * 69 + 1,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    if (input.length > peg$currPos) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseS() {
    var s0, s1;

    var key    = peg$currPos * 69 + 2,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    peg$silentFails++;
    if (input.charCodeAt(peg$currPos) === 9) {
      s0 = peg$c3;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 11) {
        s0 = peg$c5;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 12) {
          s0 = peg$c7;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 32) {
            s0 = peg$c9;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c10); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 160) {
              s0 = peg$c11;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c12); }
            }
            if (s0 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 65279) {
                s0 = peg$c13;
                peg$currPos++;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c14); }
              }
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseLineTerminator() {
    var s0;

    var key    = peg$currPos * 69 + 3,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    if (peg$c15.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseLineTerminatorSequence() {
    var s0, s1;

    var key    = peg$currPos * 69 + 4,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    peg$silentFails++;
    if (input.charCodeAt(peg$currPos) === 10) {
      s0 = peg$c18;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c19); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c20) {
        s0 = peg$c20;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 13) {
          s0 = peg$c22;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c23); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 8232) {
            s0 = peg$c24;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c25); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 8233) {
              s0 = peg$c26;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c27); }
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c17); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseComment() {
    var s0, s1;

    var key    = peg$currPos * 69 + 5,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseMultiLineComment();
    if (s1 === peg$FAILED) {
      s1 = peg$parseSingleLineComment();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c29();
    }
    s0 = s1;
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c28); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseMultiLineComment() {
    var s0, s1, s2, s3, s4, s5;

    var key    = peg$currPos * 69 + 6,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
